WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
313376
[AppKit Gestures] Gesture recognizer driven drag operations can not copy, only move
https://bugs.webkit.org/show_bug.cgi?id=313376
Summary
[AppKit Gestures] Gesture recognizer driven drag operations can not copy, onl...
Abrar Rahman Protyasha
Reported
2026-04-26 18:22:28 PDT
We forgot to plumb modifier flags associated with the gestures.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-04-26 18:22:34 PDT
<
rdar://problem/175641104
>
Abrar Rahman Protyasha
Comment 2
2026-04-27 00:36:20 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/63670
EWS
Comment 3
2026-04-27 11:12:00 PDT
Committed
312114@main
(08d2ef15f271): <
https://commits.webkit.org/312114@main
> Reviewed commits have been landed. Closing PR #63670 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug