[AppKit Gestures] Gesture recognizer driven drag operations can not copy, only move https://bugs.webkit.org/show_bug.cgi?id=313376 rdar://175641104

Reviewed by Aditya Keerthi.

In 312023@main, we brought up drag operations driven through gesture
reecognizers, but unconditionally synthesized mouse events with no
modifier flags to drive WebCore's drag pipeline. In doing so, we lost
the ability to do "copy" drag operations, which require the "Option" key
as an active modifier.

This commit undoes that mistake by fetching the modifier flag associated
with the drag press gesture and passing it on to the synthesized mouse
events.

* Source/WebKit/UIProcess/mac/WKAppKitGestureController.mm:
(-[WKAppKitGestureController dragPressGestureRecognized:]):

Canonical link: https://commits.webkit.org/312114@main